# docs/swagger.json
@@ -41,7 +41,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.SubjectContent"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.SubjectContent"
+                            }
                         }
                     }
                 }
@@ -49,19 +52,22 @@
         },
         "/getSubjects": {
             "get": {
-                "description": "Responds with pong status.",
+                "description": "Responds with all subjects",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "getSubjects"
                 ],
-                "summary": "Basic health check to ensure service is responding",
+                "summary": "Get all subjects",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Subjects"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Subjects"
+                            }
                         }
                     }
                 }
